[gd_scene load_steps=8 format=3 uid="uid://qhbwttdh5oqx"]

[ext_resource type="Script" uid="uid://cfmfps4egvhdh" path="res://Entities/UI/PlanetPage/new_shipment_panel.gd" id="1_rc0j7"]
[ext_resource type="Script" uid="uid://r1cd2fcjds00" path="res://Entities/UI/PlanetPage/rule.gd" id="2_f8cap"]
[ext_resource type="Texture2D" uid="uid://dnaqyuah2wasp" path="res://Assets/Textures/UI Textures/Resources/People.png" id="3_8l7co"]
[ext_resource type="Texture2D" uid="uid://b1lsgjyqlgb0c" path="res://Assets/Textures/UI Textures/Resources/Food.png" id="4_fjntc"]
[ext_resource type="Texture2D" uid="uid://df4lia88n7nwt" path="res://Assets/Textures/UI Textures/Resources/Cog.png" id="5_puuc6"]
[ext_resource type="Texture2D" uid="uid://qftnbjvup0f1" path="res://Assets/Textures/UI Textures/Resources/Ingot.png" id="6_1nak0"]
[ext_resource type="Texture2D" uid="uid://i2qu4ns67dra" path="res://Assets/Textures/UI Textures/Cross.png" id="7_6q4ju"]

[node name="NewTradePanel" type="Panel"]
custom_minimum_size = Vector2(600, 450)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rc0j7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.5
offset_top = 13.0
offset_right = 46.5
offset_bottom = 31.0
grow_horizontal = 2
text = "New Trade"

[node name="RuleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 44.0
offset_right = -46.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2

[node name="Rule" type="HBoxContainer" parent="RuleContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
script = ExtResource("2_f8cap")

[node name="SubjectButton" type="OptionButton" parent="RuleContainer/Rule"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Sender has"
popup/item_0/id = 0
popup/item_1/text = "Receiver has"
popup/item_1/id = 1

[node name="ConditionButton" type="OptionButton" parent="RuleContainer/Rule"]
layout_mode = 2
item_count = 3
popup/item_0/text = "less than"
popup/item_0/id = 0
popup/item_1/text = "exactly"
popup/item_1/id = 1
popup/item_2/text = "more than"
popup/item_2/id = 2

[node name="Amount" type="SpinBox" parent="RuleContainer/Rule"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 50000.0
rounded = true

[node name="ResourceButton" type="OptionButton" parent="RuleContainer/Rule"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
expand_icon = true
selected = 0
item_count = 5
popup/item_0/icon = ExtResource("3_8l7co")
popup/item_0/id = 0
popup/item_1/icon = ExtResource("4_fjntc")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("5_puuc6")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("6_1nak0")
popup/item_3/id = 3
popup/item_4/icon = ExtResource("6_1nak0")
popup/item_4/id = 4

[node name="Rule2" type="HBoxContainer" parent="RuleContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
script = ExtResource("2_f8cap")

[node name="SubjectButton" type="OptionButton" parent="RuleContainer/Rule2"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Sender has"
popup/item_0/id = 0
popup/item_1/text = "Receiver has"
popup/item_1/id = 1

[node name="ConditionButton" type="OptionButton" parent="RuleContainer/Rule2"]
layout_mode = 2
item_count = 3
popup/item_0/text = "less than"
popup/item_0/id = 0
popup/item_1/text = "exactly"
popup/item_1/id = 1
popup/item_2/text = "more than"
popup/item_2/id = 2

[node name="Amount" type="SpinBox" parent="RuleContainer/Rule2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 50000.0
rounded = true

[node name="ResourceButton" type="OptionButton" parent="RuleContainer/Rule2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
expand_icon = true
item_count = 5
popup/item_0/icon = ExtResource("3_8l7co")
popup/item_0/id = 0
popup/item_1/icon = ExtResource("4_fjntc")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("5_puuc6")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("6_1nak0")
popup/item_3/id = 3
popup/item_4/icon = ExtResource("6_1nak0")
popup/item_4/id = 4

[node name="Rule3" type="HBoxContainer" parent="RuleContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
script = ExtResource("2_f8cap")

[node name="SubjectButton" type="OptionButton" parent="RuleContainer/Rule3"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Sender has"
popup/item_0/id = 0
popup/item_1/text = "Receiver has"
popup/item_1/id = 1

[node name="ConditionButton" type="OptionButton" parent="RuleContainer/Rule3"]
layout_mode = 2
item_count = 3
popup/item_0/text = "less than"
popup/item_0/id = 0
popup/item_1/text = "exactly"
popup/item_1/id = 1
popup/item_2/text = "more than"
popup/item_2/id = 2

[node name="Amount" type="SpinBox" parent="RuleContainer/Rule3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 50000.0
rounded = true

[node name="ResourceButton" type="OptionButton" parent="RuleContainer/Rule3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
expand_icon = true
item_count = 5
popup/item_0/icon = ExtResource("3_8l7co")
popup/item_0/id = 0
popup/item_1/icon = ExtResource("4_fjntc")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("5_puuc6")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("6_1nak0")
popup/item_3/id = 3
popup/item_4/icon = ExtResource("6_1nak0")
popup/item_4/id = 4

[node name="AssignButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.162064
offset_top = -42.251
offset_right = 48.162064
grow_horizontal = 2
grow_vertical = 0
text = "assign"

[node name="CargoContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.661987
offset_top = -123.0
offset_right = 25.66217
offset_bottom = -88.74899
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CargoContainer"]
layout_mode = 2
text = "Send"

[node name="SpinBox" type="SpinBox" parent="CargoContainer"]
layout_mode = 2
max_value = 5000.0
rounded = true

[node name="Label3" type="Label" parent="CargoContainer"]
layout_mode = 2
text = "of"

[node name="ResourceButton" type="OptionButton" parent="CargoContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
icon_alignment = 1
expand_icon = true
item_count = 5
popup/item_0/text = "population"
popup/item_0/icon = ExtResource("3_8l7co")
popup/item_0/id = 0
popup/item_1/text = "food"
popup/item_1/icon = ExtResource("4_fjntc")
popup/item_1/id = 1
popup/item_2/text = "technology"
popup/item_2/icon = ExtResource("5_puuc6")
popup/item_2/id = 2
popup/item_3/text = "iron"
popup/item_3/icon = ExtResource("6_1nak0")
popup/item_3/id = 3
popup/item_4/text = "uranium"
popup/item_4/icon = ExtResource("6_1nak0")
popup/item_4/id = 4

[node name="Label2" type="Label" parent="CargoContainer"]
layout_mode = 2
text = "to"

[node name="PlanetButton" type="OptionButton" parent="CargoContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
item_count = 1
popup/item_0/id = 0

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.324158
offset_bottom = 24.251
grow_horizontal = 0
icon = ExtResource("7_6q4ju")
expand_icon = true

[connection signal="pressed" from="AssignButton" to="." method="_on_assign_button_pressed"]
[connection signal="item_selected" from="CargoContainer/PlanetButton" to="." method="_on_planet_button_item_selected"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
